--- a/client/app/newWork/newWork.html
+++ b/client/app/newWork/newWork.html
@@ -1,14 +1,16 @@
 <h3>Add new work</h3>
 <hr/>
 
-<button class="btn btn-lg btn-primary" ui-sref="newWork.info">Добавить информацию</button>
+<form>
+  <ui-view></ui-view>
+</form>
 
-<ui-view></ui-view>
 
 
 
-<hr/>
-<h3>All works</h3>
+
+
+
 
 
 
