--- a/client/app/newWork/newWorkInfo.html
+++ b/client/app/newWork/newWorkInfo.html
@@ -1,4 +1,4 @@
-<form>
+<div class="step1">
   <div class="form-group">
     <label for="">Заголовок:</label>
     <input class="form-control" type="text" ng-model="newWork.heading"/>
@@ -9,8 +9,6 @@
     <label for="">Описание:</label>
     <div text-angular ng-model="newWork.description"></div>
   </div>
+  <button class="btn btn-lg btn-primary" ng-click="createNewWork()">Добавить информацию</button>
   <hr/>
-</form>
-<button class="btn btn-lg btn-primary" ui-sref="newWork.info.photos">Добавить фотографии</button>
-<ui-view></ui-view>
-
+</div>
