--- a/client/app/newWork/newWorkPhotos.html
+++ b/client/app/newWork/newWorkPhotos.html
@@ -1,4 +1,7 @@
-<div class="form-group">
-  <label for="">Фотографии:</label>
-  <div ng-include="'components/fileUploader/fileuploader.html'"></div>
+<div class="step2">
+  <div class="form-group">
+    <label for="">Фотографии:</label>
+    <div ng-include="'components/fileUploader/fileuploader.html'"></div>
+  </div>
+  <hr/>
 </div>
