--- a/client/index.html
+++ b/client/index.html
@@ -83,6 +83,9 @@
           <script src="app/main/main.js"></script>
           <script src="app/newWork/newWork.controller.js"></script>
           <script src="app/newWork/newWork.js"></script>
+          <script src="app/workPreview/workEditInfo.controller.js"></script>
+          <script src="app/workPreview/workPreview.controller.js"></script>
+          <script src="app/workPreview/workPreview.js"></script>
           <script src="components/fileUploader/fileuploader.controller.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
           <script src="components/services/Work.js"></script>
