--- a/client/app/workPreview/workEditInfo.html
+++ b/client/app/workPreview/workEditInfo.html
@@ -1,16 +1,26 @@
 <div>
-  <div class="form-group">
-    <label for="">Заголовок:</label>
-    <input class="form-control" type="text" ng-model="new_work.heading"/>
-  </div>
-  <hr/>
+    <div class="form-group">
+        <label for="">Заголовок:</label>
+        <input class="form-control" type="text" ng-model="new_work.heading"/>
+    </div>
+    <hr/>
 
-  <div class="form-group">
-    <label for="">Описание:</label>
-    <div text-angular ng-model="new_work.description"></div>
-  </div>
-  <button class="btn btn-lg btn-success" ng-click="update()">Сохранить</button>
-  <button class="btn btn-lg btn-default" ng-click="cancel()">Отмена</button>
+    <div class="form-group">
+        <label for="">Описание:</label>
 
-  <hr/>
+        <div text-angular ng-model="new_work.description"></div>
+    </div>
+    <button class="btn btn-lg btn-success" ng-click="update()">Сохранить</button>
+    <button class="btn btn-lg btn-default" ng-click="cancel()">Отмена</button>
+
+    <hr/>
+   <div class="form-group">
+       <label for="">Картинки:</label>
+       <div>
+           <button class="btn btn-lg btn-danger" ng-click="removeAllImages()">Удалить все</button>
+           <button class="btn btn-lg btn-primary" ui-sref="newWork.photos({_id: new_work._id})">Добавить новые</button>
+       </div>
+
+
+   </div>
 </div>
