--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
       <link rel="stylesheet" href="bower_components/textAngular/src/textAngular.css" />
+      <link rel="stylesheet" href="bower_components/angularjs-toaster/toaster.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -28,6 +29,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
+    <toaster-container></toaster-container>
     <div ng-include="'components/navbar/navbar.html'"></div>
 
     <div class="container">
@@ -73,6 +75,8 @@
       <script src="bower_components/textAngular/src/textAngular-sanitize.js"></script>
       <script src="bower_components/textAngular/src/textAngularSetup.js"></script>
       <script src="bower_components/angular-file-upload/angular-file-upload.js"></script>
+      <script src="bower_components/angular-animate/angular-animate.js"></script>
+      <script src="bower_components/angularjs-toaster/toaster.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
